# SSBG

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
_bmad-output/implementation-artifacts/: 1-1-set-up-initial-project-from-selected-backend-starter-foundation.md  1-2-expose-health-and-readiness-signals-for-gateway-and-dependencies.md  1-3-authenticate-protected-api-requests-using-provisioned-api-keys.md  1-4-enforce-role-based-authorization-for-protected-operations.md  1-5-provide-initial-admin-security-management-apis-api-keys-and-basic-policy-records.md  2-1-accept-backup-requests-and-validate-base-request-contract.md  2-2-require-and-persist-classification-metadata-for-accepted-backups.md  2-3-evaluate-policy-before-backup-execution.md  2-4-encrypt-backup-payloads-before-object-storage-and-track-key-version.md  2-5-persist-backup-metadata-lifecycle-status-and-audit-evidence.md  3-1-accept-restore-requests-and-load-backup-metadata.md  3-2-require-mfa-and-policy-authorization-before-restore-execution.md  3-3-enforce-incident-level-restore-restrictions.md  3-4-restore-decrypt-and-verify-integrity-before-success.md  3-5-issue-time-limited-restore-access-tokens.md  4-1-record-tamper-evident-audit-entries-for-security-relevant-actions.md  4-2-provide-audit-chain-validation-api-or-command.md  sprint-status.yaml  (+8 more)
alembic/: env.py
app/: main.py
docs/: SSBG_ARCHITECTURE.md  SSBG_PRD_v2 (1).md  validation-report-2026-02-26.md
scripts/: dev_bootstrap.ps1  seed_demo_data.py  verify_audit_chain.py
tests/: conftest.py
(+119 files in other folders)
