[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssbg"
version = "0.1.0"
description = "Secure Sovereign Backup Gateway backend foundation"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.133,<0.134",
  "uvicorn[standard]>=0.41,<0.42",
  "sqlalchemy>=2.0,<2.1",
  "asyncpg>=0.30,<0.31",
  "psycopg>=3.2,<4",
  "alembic>=1.18,<1.19",
  "pydantic>=2.12,<3",
  "pydantic-settings>=2.13,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "pytest-asyncio>=1.0,<2",
  "httpx>=0.28,<0.29",
  "ruff>=0.12,<0.13",
  "mypy>=1.12,<2",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
packages = ["app"]
ignore_missing_imports = true
exclude = ["^alembic/"]
